--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <title>i am ready to wait</title>
 
     <!-- The website stylesheet -->
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="style.css" />
 
     <!-- The website JavaScript file -->
     <script src="/script.js" defer></script>
