--- a/waiting.html
+++ b/waiting.html
@@ -19,7 +19,7 @@ timer.addEventListener('secondsUpdated', function (e) {
 });
   </script>
   
-  <link rel="stylesheet" href="/waiting.css" />
+  <link rel="stylesheet" href="waiting.css" />
 </head>
 <body>
   <div id="gettingValuesExample">
