--- a/waiting.html
+++ b/waiting.html
@@ -4,7 +4,7 @@
   <title>i am ready to wait</title>
   <link rel="icon" type="image/x-icon" href="https://em-content.zobj.net/source/apple/419/three-oclock_1f552.png">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
-  <script src="/easytimer.js"></script>
+  <script src="easytimer.js"></script>
   <script>
     var timerInstance = new easytimer.Timer();
   </script>
