--- a/waiting.html
+++ b/waiting.html
@@ -55,7 +55,7 @@ timer.addEventListener('secondsUpdated', function (e) {
       youve been waiting for
     <span class="days">0</span><span> days</span> <span class="hours">0</span><span> hours</span> <span class="minutes">0</span><span> minutes</span> <span class="seconds">0</span><span> seconds</span>
     <!--<input type="text" placeholder="what are you waiting for?">-->
-    <a href="/">stop waiting</a>
+    <a href="/readytowait">stop waiting</a>
     <audio autoplay loop>
       <source src="background-music.mp3" type="audio/mpeg">
     </audio>
